force-app/main/default/objects/EnhancedPicklistValue__c/EnhancedPicklistValue__c.object-meta.xml
<CustomObject>
    <label>Enhanced Picklist Value</label>
    <nameField>
        <displayFormat>EPV# {0}</displayFormat>
        <label>Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhanced Picklist Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>