force-app/main/default/objects/EnhancedPicklistValue__c/fields/EnhancedPathId__c.field-meta.xml
<CustomField>
    <fullName>EnhancedPathId__c</fullName>
    <label>Enhanced Path</label>
    <referenceTo>EnhancedPath__c</referenceTo>
    <relationshipLabel>Picklist Values</relationshipLabel>
    <relationshipName>EnhancedPicklistValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>