force-app/main/default/objects/EnhancedPicklistValue__c/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsWon</label>
    <type>Checkbox</type>
</CustomField>